k8s/templates/keycloak_template.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: auth
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  type: NodePort
  ports:
    - port: 8080
      targetPort: "http"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  namespace: auth
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak-container
          image: quay.io/keycloak/keycloak:16.1.0
          ports:
            - containerPort: 8080
              name: "http"
            - containerPort: 8443
              name: "https"
          readinessProbe:
            httpGet:
              path: /auth/realms/master
              port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: auth
spec:
  rules:
    - host: keycloak.%HOST%.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
