k8s/templates/rabbitmq_template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icerabbitmq
  namespace: rabbitmq-system
spec:
  rules:
  - host: rabbitmq-management.%EXT_IP%.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: icerabbitmq
            port: 
              number: 15672
